# pi-grid

./: .gitignore  BACKLOG.md  CMakeLists.txt  Makefile  PI_SETUP.md  README.md
.github/workflows/: ci.yml  release.yml
contrib/: grid-midi.service
include/: note_utils.h
scripts/: bootstrap_macos.sh  check_format.sh  run_tidy.sh
src/: main.c  note_utils.c
tests/: test_note_utils.c
